--- a/app/views/comedians/welcome.html.erb
+++ b/app/views/comedians/welcome.html.erb
@@ -6,6 +6,8 @@
   <section class="enter_link">
     <%= link_to "Enter Site", comedians_path %>
   </section>
+  <%= link_to "Register as a User", new_user_path %>
+  <%= link_to "I already have an account", login_path %>
 </div>
   <footer class="info_box">
     <p>This is a solo project for
